<resources>
    <string name="app_name">Lecture Recording Manager</string>
    <string name="find_recordings">Add Recordings</string>
    <string name="title_activity_canvas_browser">Canvas Browser</string>
    <string name="title_activity_recording_browser">Recording List</string>
    <string name="list_recordings">View Recordings</string>
    <string name="title_activity_recording_view">Lecture Recording</string>
    <string name="download">Download</string>
    <string name="downloading">Downloading</string>
    <string name="downloaded">Downloaded</string>
    <string name="delete">Delete</string>
    <string name="error">Error</string>
    <string name="starting">Authenticating</string>
    <string name="sync">Sync</string>
    <string name="delete_title">Delete Recording</string>
    <string name="delete_body">Are you sure you want to delete this recording?</string>
    <string name="download_error">Download error. You may need to authenticate</string>
    <string name="sync_body">This will sync missing recordings for your courses from the server. Only links (not video files) will be downloaded.</string>
    <string name="sync_title">Sync Recording List</string>
    <string name="synctext">Syncing recordings from server…</string>
    <string name="pleasewait">Please wait</string>
    <string name="play">Play</string>
    <string name="filter_title">Filter Courses</string>
    <string name="filter">Filter</string>
    <string name="autoscan">Auto scrape recordings</string>
    <string name="desc_view">View and manage already added recordings</string>
    <string name="desc_scan">Automatically scan Canvas for recordings</string>
    <string name="desc_add">Manually add recordings from Canvas</string>
    <string name="scrapeText">Scraping for links…</string>
    <string name="canvas_scraper">Canvas Scraper (BETA)</string>
    <string name="authenticating">Authenticating…</string>
    <string name="scrape_title">Courses to scrape</string>
    <string name="scrape_desc">Scraping many courses may take a very long time. Courses already scraped this session will be ignored</string>
    <string name="start">Start</string>
    <string name="tokenError">Unable to get authentication token - Please try again</string>
    <string name="open_source_licenses">Open Source Licenses</string>
    <string name="ok">OK</string>

    <string name="title_activity_video_player">VideoPlayerActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="select_player_desc">Would you like to use the built-in or an external video player?</string>
    <string name="select_player_title">Select Player</string>
    <string name="select_player_builtin">Built-in</string>
    <string name="select_player_external">External</string>
</resources>
